tests/ui/associated-types/hr-associated-type-bound-1.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-1.rs:12:14
   |
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-1.rs:3:33
   |
LL | trait X<'a>
   |       - required by a bound in this trait
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-1.rs:17:10
   |
LL |     1i32.f("abc");
   |          ^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `X::f`
  --> $DIR/hr-associated-type-bound-1.rs:3:33
   |
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ^^^^^ required by this bound in `X::f`
...
LL |     fn f(&self, x: &Self::U) {
   |        - required by a bound in this associated function

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
